# recently-played

./: .envexample  .gitignore  README.md  SetUp.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  main.py  music.py  requirements.txt
api/core/: lastfm.py
api/routers/: callback.py  music.py  scrobble.py
api/schemas/: scrobble.py
api/templates/: test.html
app/: main.py
app/core/: lastfm.py
app/routers/: albums.py  artists.py  music.py  tracks.py  user.py  widget.py
app/schemas/: scrobble.py
app/templates/: test.html
src/: index.py
src/core/: config.py  lastfm.py
src/routers/: callback.py  music.py  scrobble.py
